Add some info about examples IDS

--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1,4 +1,6 @@
+
 \section{Распознавание вторжений в БД}
+
 
 
 \subsection{Основные понятия}
@@ -21,15 +23,16 @@
 Если классифицировать методы обнаружения вторжения, используемые в системах обнаружения вторжений (СОВ), 
 то можно выделить три типа (согласно классификации, предложенной Стефаном Аксельсоном [\cite{IDSClassification}]):
 \begin{itemize}
-	\item синтаксические методы (или методы поиска злоупотреблений, англ. misuse detection)
+	\item синтаксические методы (или методы поиска злоупотреблений, англ. misuse detection).
 		К таким методам обычно относятся методы, которые основываются на обнаружения вторжений 
 		путём сравнения SQL-запросов с шаблонами недопустимых синтаксических конструкций.
-	\item методы обнаружения аномалий (англ. anomaly detection)
+	\item методы обнаружения аномалий (англ. anomaly detection).
 		Такие методы, наоборот, в отличие от первого типа, подрузамевают создание шаблонов нормального 
 		поведения пользователя и последующее сравнение этих шаблонов с действиями, выполняемыми пользователями 
 		во время работы с БД.
 	\item смешанные методы, представляющие собой композицию первых двух
 \end{itemize}
+
 
 
 \subsection{Системы распознавания вторжений}
@@ -48,6 +51,7 @@
 неавторизованного доступа и предотвращания попыток несанкционированного доступа к БД.
 
 
+
 \subsubsection{Типы моделей систем распознавания вторжений (ID-систем)}
 
 Существует множество способов классификации СОВ, которые не являются однозначными или обязательными.
@@ -59,15 +63,16 @@
 	\item \textbf{По классу защиты}
 \end{itemize}
 
+
 \paragraph*{По способу мониторинга.}
 
 \begin{itemize}
-	\item \textbf{Сетевая СОВ (Network-based IDS, NIDS)} -- система, 
+	\item \textbf{Сетевая СОВ (англ. Network-based IDS, NIDS)} -- система, 
 	которая занимается проверкой сетевого трафика с концентратора или коммутатора и анализируя сетевые пакеты.
-	\item \textbf{Узловая СОВ (Host-based IDS, HIDS)} -- система, 
+	\item \textbf{Узловая СОВ (англ. Host-based IDS, HIDS)} -- система, 
 	отслеживающая вторжения, используя анализ системных вызовов, логов приложений, модификаций файлов 
 	(исполняемых, файлов паролей, системных баз данных), состояния хоста и прочих источников. 
-	\item \textbf{Основанная на прикладных протоколах СОВ (Application protocol-based IDS, APIDS)} -- система, 
+	\item \textbf{Основанная на прикладных протоколах СОВ (англ. Application-based IDS, APIDS)} -- система, 
 	в которой ведется наблюдение за специализированными прикладными протоколами и анализ соответствующих 
 	данных. Например, на веб-сервере с SQL базой данных СОВ будет отслеживать содержимое SQL команд, 
 	передаваемых на сервер.
@@ -75,24 +80,27 @@
 	систем обнаружения вторжений.
 \end{itemize}
 
+
 \paragraph*{По способу анализа.}
 
 О данной классификации уже говорилось ранее. Она строится по методу анализа событий, полученных из источника 
 информации, и методу принятия решения, что происходит проникновение. Способами анализа являются 
 \textbf{обнаружение злоупотреблений} и \textbf{обнаружение аномалий}.
 
+
 \paragraph*{По скорости реакции.}
 
 Определяют два типа СОВ по времени между получением информации из источника и ее анализом и принятием решения.
 В зависимости от задержки во времени, СОВ разделятся на:
 \begin{itemize}
-	\item \textbf{с пакетным режимом (interval-based)}. В таких системах реакция происходит 
+	\item \textbf{с пакетным режимом (англ. interval-based)}. В таких системах реакция происходит 
 	через определенные интервалы времени, а информационный поток от точек мониторинга до инструментов анализа
 	не является непрерывным.
-	\item \textbf{непрерывные (real-time)}. В таких системах обрабатывается непрерывный поток информации 
+	\item \textbf{непрерывные (англ. real-time)}. В таких системах обрабатывается непрерывный поток информации 
 	от источников. При этом таких тип является преобладающей типом в сетевых СОВ, которые получают 
 	информацию из потока сетевого трафика.
 \end{itemize}
+
 
 \paragraph*{По классу защиты.}
 
@@ -113,9 +121,12 @@
 \end{itemize}
 
 
+
 \subsubsection{Общая структура ID-систем} 
 
+
 \paragraph*{Архитектура СОВ.} Основнымы архитектурными компонентами СОВ являются: 
+
 \begin{enumerate}
 	\item \textbf{Host} -- система, на которой выполняется ПО СОВ.
 	\item \textbf{Target} -- система, за которой наблюдает СОВ.
@@ -131,6 +142,7 @@
 выполнение СОВ на отдельной системе, тем самым разделяя системы Host и Target. Это улучшает безопасность 
 функционирования СОВ, так как в этом случае проще спрятать существование СОВ от атакующих.
 
+
 \paragraph*{Компоненты современных СОВ:}
 
 \begin{itemize}
@@ -138,6 +150,7 @@
 	\item анализатор событий, обнаруженных сенсорами;
 	\item компонента принятия решения.
 \end{itemize}
+
 
 \paragraph*{Способы управления СОВ:}
 
@@ -159,6 +172,7 @@
 	\item связи для мониторинга хостов и сетей;
 	\item связи для выполнения ответов СОВ.
 \end{itemize}
+
 
 
 \subsubsection{Шаблоны классов пользователей}
@@ -192,12 +206,14 @@
 	\item другие метрики, включая нейросети, генетические алгоритмы и модели иммунных систем.
 \end{itemize}
 
+
 \paragraph*{Преимущества определения аномалий:}
 
 \begin{itemize}
 	\item IDS, основанные на определении аномалий, обнаруживают неожиданное поведение и, таким образом, имеют возможность определить симптомы атак без знания конкретных деталей атаки.
 	\item Детекторы аномалий могут создавать информацию, которая в дальнейшем будет использоваться для определения сигнатур для детекторов злоупотреблений.
 \end{itemize}
+
 
 \paragraph*{Недостатки определения аномалий:}
 
@@ -206,7 +222,10 @@
 	\item Подходы определения аномалий часто требуют некоторого этапа обучения системы, во время которого определяются характеристики нормального поведения.
 \end{itemize}
 
+
+
 \subsubsection{Модели известных атак}
+
 \begin{itemize}
 	\item Необычные запросы и команды администрирования SQL сервера, часто употребляемые 
 	взломщиками (DROP, CREATE и т.д.)
@@ -219,6 +238,7 @@
 \end{itemize}
 
 
+
 \subsection{Экспертные ID-системы}
 
 Технологию построения экспертных систем часто называют инженерией знаний. Как правило, этот процесс требует специфической формы взаимодействия создателя экспертной системы, которого называют инженером знаний, и одного или нескольких экспертов в некоторой предметной области.  Инженер знаний <<извлекает>> из экспертов процедуры, стратегии,  эмпирические правила, которые они используют при решении задач, и  встраивает эти знания в экспертную систему. В результате появляется   компьютерная программа, которая решает задачи во многом так же, как   эксперты -- люди \autocite{ExpertSystems}.
@@ -229,7 +249,9 @@
 	\item Если наблюдается более чем N фактов А, ТО записать в лог факт: происходит DDoS атака
 \end{itemize}
 
-\paragraph{Метрики}
+
+
+\subsubsection{Метрики}
 
 \begin{itemize}
 	\item \textbf{Показатель активности} -- величина, при превышении которой активность подсистемы оценивается как быстро прогрессирующая. В общем случае используется для обнаружения аномалий, связанных с резким ускорением в работе. Пример: среднее число записей аудита, обрабатываемых для элемента защищаемой системы в единицу времени.
@@ -240,7 +262,9 @@
 
 \footnotetext{Здесь под \textit{категорией} понимается группа подсистем, объединенных по некоему общему принципу}
 
-\subsubsection*{Статистические модели}
+
+
+\subsubsection{Статистические модели}
 
 При обнаружении аномалий с использованием профайла в основном применяют статистические методы оценки. Процесс обнаружения происходит следующим образом: текущие значения измерений профайла сравнивают с сохраненными значениями. Результат сравнения - показатель аномальности в измерении. Общий показатель аномальности в простейшем случае может вычисляться при помощи некоторой общей функции от значений показателя аномалии в каждом измерении профайла.
 
@@ -254,7 +278,9 @@
 
 Параметры $M_1, M_2, \dots, M_n$ могут быть зависимыми друг от друга. В таком случае, объединяющая функция будет более сложной.
 
-\subsubsection*{Профили}
+
+
+\subsubsection{Профили}
 
 Одним из способов формирования <<образа>> нормального поведения системы состоит в накоплении измерений значения параметров оценки в специальной структуре данных. Эта структура данных называется \textit{профайлом}. 
 
@@ -264,28 +290,87 @@
 	\item Быстрое выполнение операции обновления
 \end{itemize}
 
-\paragraph{Примеры ID-систем}
-\begin{enumerate}
-	\item \textbf{GreenSQL-FW}. Работает как прокси-сервер между веб-приложением и SQL сервером. Анализирует SQL команды на предмет аномальных запросов.
-	
-	GreenSQL поддерживает несколько режимов работы:
-	\begin{itemize}
-		\item \textbf{Simulation Mode} -- пассивная система обнаружения атак (IDS). Протоколирует SQL запросы, выдает предупреждения на консоль управления.
-		\item \textbf{Blocking Suspicious Commands} -- активная СОА. Атаки не только обнаруживаются, но и блокируются (IPS) в соответствии с установленными правилами, указывающими на аномальность запроса.
-		\item \textbf{Active protection from unknown queries} -- блокирование всех неизвестных запросов (db firewall)
-		\item \textbf{Learning mode} -- предназначен для прогона и настройки правил в <<чистой>> среде, что позволяет сформировать белый список и предотвратить в последствии ложные срабатывания анализатора запросов.
-	\end{itemize}
-	
-	\item \textbf{Snort} -- свободная сетевая система предотвращения вторжений (IPS) и обнаружения вторжений (IDS) с открытым исходным кодом, способная выполнять регистрацию пакетов и в реальном времени осуществлять анализ трафика в IP-сетях. Способна выявлять атаки на SQL базы данных. 
 
-	Особенности Snort:
+
+\subsubsection{Примеры ID-систем}
+
+
+\paragraph*{GreenSQL} (APIDS система) -- межсетевой экран, функционирующий как прокси-сервер между 
+веб-приложением и SQL сервером. То есть приложение устанавливает соединения к БД не напрямую, а 
+через сервер GreenSQL. GreenSQL анализирует SQL запросы на предмет аномальных запросов, и в случае 
+нормального запроса (то есть если степень риска запроса мала) перенаправляет его на внутренний сервер БД.
+
+GreenSQL поддерживает следующие режимы работы:
+\begin{itemize}
+	\item \textbf{Режим симуляции (англ. Simulation Mode)} -- пассивная система обнаружения атак (IDS). 
+	Протоколирует SQL запросы, выдает предупреждения на консоль управления.
+	\item \textbf{Блокировка подозрительных команд (англ. Blocking Suspicious Commands/Risk Based)} -- активная СОВ. 
+	Атаки не только обнаруживаются, но и блокируются (IPS) в соответствии с установленными правилами, 
+	указывающими на аномальность запроса.
+	\item \textbf{Активная защита от неизвестных запросов (англ. Database Firewall)} -- 
+	блокирование всех неизвестных запросов.
+	\item \textbf{Режим обучения (англ. Learning mode)} -- предназначен для прогона и настройки правил 
+	в <<чистой>> среде, что позволяет сформировать белый список и предотвратить в последствии ложные 
+	срабатывания анализатора запросов.
+\end{itemize}
+
+Особенности GreenSQL:
+\begin{itemize}
+	\item Поддержка ряда СУБД: Microsoft SQL 2000/2005/2008, MySQL 4.x/5.x, PostgreSQL 7.x/8.x. 
+	\item Является кросс-платформенной. Среди официально поддерживаемых платформ Microsoft 
+	Windows Server 2003/2008, Ubuntu, CentOS. Поддерживаются 32-х и 64-х разрядные системы.
+	\item GreenSQL находит подозрительные запросы, используя ряд методов: 
 	\begin{itemize}
-		\item Возможность написания собственных правил
-		\item Расширение функциональности с помощью подключения дополнительных модулей
-		\item Гибкая система оповещения об атаках: Log-файлы, устройства вывода, БД и прочие
+		\item Путем определения административных и чувствительных команд SQL. Например: SHOW TABLES, CREATE TABLE, ALTER TABLE.
+		\item Путем подсчета риска запроса. На это может влиять пустая строка пароля, "or" внутри запроса или выражения SQL, 
+		которые всегда возвращают истину (1=1).
 	\end{itemize}
-	
-\end{enumerate}
+\end{itemize}
+
+
+\paragraph*{Snort} (NIDS система) -- свободная сетевая система предотвращения вторжений (IPS) и 
+обнаружения вторжений (IDS) с открытым исходным кодом, способная выполнять регистрацию пакетов и в реальном 
+времени осуществлять анализ трафика в IP-сетях. 
+
+Snort поддерживает следующие режимы работы:
+\begin{itemize}
+	\item \textbf{Sniffer mode}. В таком режиме программа только считывает сетевые пакеты и выводит 
+	их на консоль. 
+	\item \textbf{Packet Logger Mode}. В режиме логирования пакетов, программа будет 
+	регистрировать/логировать пакеты на диске.
+	\item \textbf{Network Intrusion Detection System Mode}. В режиме обнаружения вторжений 
+	программа будет отслеживать сетевой трафик и анализировать его в соответствии с набором правил, 
+	определенным пользователем. Затем программа выполнит определенное действие, основанное на том, 
+	что было идентифицировано.
+\end{itemize}
+
+Особенности Snort:
+\begin{itemize}
+	\item Возможность написания собственных правил.
+	\item Расширение функциональности с помощью подключения дополнительных модулей.
+	\item Гибкая система оповещения об атаках: Log-файлы, устройства вывода, БД и прочие.
+\end{itemize}
+
+
+\paragraph*{Suricata} (NIDS система) -- свободная сетевая система предотвращения вторжений (IPS) и 
+обнаружения вторжений (IDS) с открытым исходным кодом. Основана разработчиками, которые трудились над IPS версией Snort,
+поэтому имеет схожий функционал и обладает полная поддержкой формата правил Snort.
+
+Особенности Suricata:
+\begin{itemize}
+	\item Многозадачность.
+	\item Автоматическое определение протокола.
+	\item Высокая производительность, позволяющая обрабатывать трафик до 10Gbit на обычном оборудовании.
+\end{itemize}
+
+
+\paragraph*{Sagan} (HIDS система) -- многопоточная, высокопроизводительная система анализа журналов и мониторинга 
+появления в логах событий, связанных с безопасностью, и реагирования на эти события в режиме реального времени. 
+Система работает в операционных системах Unix. 
+
+Sagan также относится к категории систем управления инцидентами и событиями информационной безопасности 
+(англ. Security Information and Log Management, SEIM).
+
 
 \subsection{Развитие систем распознавания вторжений}
 
