Add Take-Grant model

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -274,3 +274,10 @@
     urldate = {2021-04-09},
     year={2021}
 }
+
+@online{WikiTakeGrant,
+    title = {{Модель Take-Grant — Википедия}},
+    url = {https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D0%B4%D0%B5%D0%BB%D1%8C_Take-Grant},
+    urldate = {2021-04-10},
+    year={2021}
+}
