Finished examples of discretionary models

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -281,3 +281,18 @@
     urldate = {2021-04-10},
     year={2021}
 }
+
+@online{Jalili, 
+    title = {{Database Security, 2nd Semester, CE, SUT}},
+    author = {Jalili},
+    url = {http://ce.sharif.ac.ir/courses/84-85/2/ce925/resources/root/Course%20Materials/3_Acten_Wood_Slides.pdf},
+    urldate = {2021-04-12},
+    year={2021}
+}
+
+@online{SecModels, 
+    title = {{Security models}},
+    url = {https://slideplayer.com/slide/4007727/},
+    urldate = {2021-04-12},
+    year={2021}
+}
