--- a/bibliography.bib
+++ b/bibliography.bib
@@ -296,3 +296,10 @@
     urldate = {2021-04-12},
     year={2021}
 }
+
+@online{Biba, 
+    title = {{Модель Биба - Biba Model}},
+    url = {https://ru.qaz.wiki/wiki/Biba_Model},
+    urldate = {2021-04-12},
+    year={2021}
+}
