Add Mandatory Models

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -303,3 +303,26 @@
     urldate = {2021-04-12},
     year={2021}
 }
+
+@book{Osama,
+	author    = {Osama S. Faragallah}, 
+	title     = {{Multilevel Security for Relational Databases}},
+	publisher = {CRC Press},
+	year      = 2015,
+	url = {http://www.ittoday.info/Excerpts/Multilevel_Database_Security.pdf}
+}
+
+@online{LBAC,
+    title = {{Lattice-based access control - Wikipedia}},
+    url = {https://en.wikipedia.org/wiki/Lattice-based_access_control},
+    urldate = {2021-04-13},
+    year={2021}
+}
+
+@online{Jalili2, 
+    title = {{Rasool Jalili; 2nd semester 1384-1385; Database Security, Sharif Uni. of Tech.}},
+    author = {Jalili},
+    url = {http://ce.sharif.ir/courses/84-85/2/ce925/resources/root/Course%20Materials/5_Access_Models_Dion_SeaView.pdf},
+    urldate = {2021-04-14},
+    year={2021}
+}
