Вторая половина 9 пункта

--- a/part/security.tex
+++ b/part/security.tex
@@ -3,15 +3,236 @@
 \subsection{Основные понятия}
 
 \paragraph{Безопасное программное обеспечение}
+Безопасное программное обеспечение - программное обеспечение, разработанное с использованием совокупности
+мер, направленных на предотвращение появления и устранение уязвимостей программы.
+
 \paragraph{Правила безопасности}
+Политика безопасности — это совокупность норм и правил, определяющих принятые в организации меры по
+обеспечению безопасности информации, связанной с деятельностью организации. Только человек, четко
+осознающий цели организации и условия ее функционирования, может определить, какую информацию
+необходимо защищать и насколько существенными могут стать потери от несанкционированного
+распространения, искажения или разрушения информации. После того как политика безопасности
+определена, должен решаться вопрос о технологии ее реализации в автоматизированном контуре.
+Для реализации сформулированных в терминах естественного языка правил и норм политики
+безопасности необходимо использовать (или разработать) некоторую формальную модель,
+которая допускает эффективное программирование на каком-либо формальном языке.
+Наибольшее распространение в настоящее время получили две базовые модели безопасности
+данных: дискреционная и мандатная.
 
 \subsection{Методология проектирования}
-\paragraph{Отличия в проектировании безопасных ОС и СУБД}
-\paragraph{Основные требования к безопасности СУБД}
-\paragraph{Независимые принципы целостности данных}
-\paragraph{Модель авторизации в System R}
-\paragraph{Архитектура безопасной СУБД} 
-\paragraph{Архитектура SeaView и ASD} 
+
+\subsubsection{Отличия в проектировании безопасных ОС и СУБД}
+Системы управления базами данных (СУБД), как и операционные системы, содержат комбинацию сервисов
+безопасности, однако, в отличие от ОС, не являются самодостаточными. СУБД используют механизмы
+и функции ОС. Такая двухуровневость ведет к появлению специфических угроз и требует привлечения
+соответствующих средств противодействия. Например, базы данных располагаются в файлах или на дисках,
+управляемых ОС; следовательно, к объектам БД можно обратиться как штатными средствами СУБД, так и с
+помощью механизмов ОС, получив доступ к файлу или устройству.
+Подобные возможности должны учитываться в профиле защиты для СУБД.
+Необходимо реализовать хотя бы один из двух механизмов аутентификации: внешний (аутентификация средствами ОС)
+или внутренний (аутентификация средствами СУБД ).
+Еще одно проявление упомянутой выше двухуровневости - предположение безопасности базовой конфигурации,
+состоящее в том, что базовая система ( операционная система, и/или сетевые сервисы безопасности, и/или
+специальное программное обеспечение) установлены, сконфигурированы и управляются безопасным образом.
+Аналогичную направленность имеют цели безопасности для среды, предусматривающие, что базовая система
+должна обеспечить механизмы управления доступом, которые позволят защитить от несанкционированного доступа
+все связанные с СУБД файлы; кроме того, ОС предоставит средства для изоляции функций безопасности и защиты процессов СУБД.
+Однако в распределенной информационной системе уровень безопасности может поддерживаться не только средствами базовой ОС,
+но и архитектурно, путем разнесения компонентов СУБД по узлам сети и использования межсетевых экранов.
+
+\subsubsection{Основные требования к безопасности СУБД}
+Можно выделить меры обеспечения безопасности СУБД зависящие и независящие от данных.
+\textbf{Не зависящими} от данных можно назвать следующие требования:
+\begin{itemize}
+    \item \textbf{Функционирование в доверенной среде.}
+    Под доверенной средой следует понимать инфраструктуру предприятия и ее защитные механизмы,
+    обусловленные политиками безопасности. Таким образом, речь идет о функционировании СУБД в
+    соответствии с правилами безопасности, применяемыми и ко всем прочим системам предприятия.
+
+    \item \textbf{Организация физической безопасности файлов данных.}
+    Требования к физической безопасности файлов данных СУБД в целом не отличаются от требований,
+    применяемых к любым другим файлам пользователей и приложений.
+
+    \item \textbf{Организация безопасной и актуальной настройки СУБД.}
+    Данное требование включает в себя общие задачи обеспечения безопасности, такие как своевременная
+    установка обновлений, отключение неиспользуемых функций или применение эффективной политики паролей.
+\end{itemize}
+Следующие требования можно назвать \textbf{зависящими} от данных:
+\begin{itemize}
+    \item \textbf{Безопасность пользовательского ПО.}
+    Сюда можно отнести задачи построения безопасных интерфейсов и механизмов доступа к данным.
+    \item \textbf{Безопасная организация и работа с данными.}
+    Вопрос организации данных и управления ими является ключевым в системах хранения информации.
+    В эту область входят задачи организации данных с контролем целостности и другие, специфичные
+    для СУБД проблемы безопасности. Фактически эта задача включает в себя основной объем зависящих
+    от данных уязвимостей и защиты от них.
+\end{itemize}
+
+\subsubsection{Независимые принципы целостности данных}
+В работах Кларка и Вильсона определены девять абстрактных теоретических принципов,
+выполнение которых позволит обеспечить целостность данных:
+\begin{itemize}
+    \item \textbf{корректность транзакций;}
+    По первому принципу данные могут изменяться только посредством «корректных» транзакций.
+    Прямое (произвольным образом) изменение данных не допускается. В свою очередь
+    корректность транзакций должна быть некоторым способом доказана.
+    \item \textbf{авторизация пользователей;}
+    Второй принцип гласит, что изменение данных может осуществляться только
+    авторизованными пользователями, имеющими определенные привилегии.
+    \item \textbf{минимизация привилегий;}
+    Минимальность привилегий подразумевает, что пользователи (в конечном счете, субъекты)
+    должны быть наделены теми и только теми привилегиями, которые минимально необходимы
+    для выполнения тех или иных действий.
+    \item \textbf{разграничение функциональных обязанностей;}
+    Разграничение функциональных обязанностей подразумевает организацию работы с данными
+    таким образом, что в каждой из ключевых стадий, составляющих единый критически важный
+    с точки зрения целостности процесс, необходимо участие различных пользователей.
+    Этим гарантируется, что один пользователь не может выполнить весь процесс целиком
+    (или даже две его стадии) с тем, чтобы нарушить целостность данных.
+    \item \textbf{аудит произошедших событий;}
+    Аудит произошедших событий (включая возможность восстановления полной картины происшедшего)
+    является превентивной мерой в отношении потенциальных нарушителей и позволяет
+    восстановить данные в случае их повреждения.
+    \item \textbf{объективный контроль;}
+    Принцип объективного контроля также является одним из краеугольных камней политики контроля
+    целостности. Суть данного принципа заключается в том, что контроль целостности данных имеет
+    смысл лишь тогда, когда эти данные отражают реальное положение вещей. Очевидно, что нет смысла
+    заботиться о целостности данных, связанных с размещением боевого арсенала, который уже отправлен
+    на переплавку. В связи с этим Кларк и Вильсон указывают на необходимость регулярных проверок,
+    целью которых является выявление возможных несоответствий между защищаемыми данными и объективной
+    реальностью, которую они отражают.
+    \item \textbf{управление передачей привилегий;}
+    Управление передачей привилегий необходимо для эффективной работы всей политики безопасности.
+    Если схема назначения привилегий неадекватно отражает организационную структуру предприятия или
+    не позволяет администраторам безопасности гибко манипулировать ею для обеспечения эффективности
+    производственной деятельности, защита становится тяжким бременем и провоцирует попытки обойти ее
+    там, где она мешает «нормальной» работе.
+    \item \textbf{эффективное применение механизмов защиты;}
+    В основу восьмого принципа контроля целостности заложен ряд идей, призванных обеспечить эффективное
+    применение имеющихся механизмов обеспечения безопасности. На практике зачастую оказывается, что
+    предусмотренные в системе механизмы безопасности или некорректно используются, или полностью
+    игнорируются системными администраторами.
+    \item \textbf{простота использования защитных механизмов;}
+    Простота использования защитных механизмов подразумевает, что самый безопасный путь эксплуатации системы
+    будет также наиболее простым, и наоборот, самый простой - наиболее защищенным.
+\end{itemize}
+
+\subsubsection{Модель авторизации в System R}
+Подход к авторизации в System R основан на списках доступа, с возможностью отмены доступа.
+В System R нет администратора базы данных - суперпользователя в обычном смысле. Любой пользователь может создавать таблицы.
+Когда пользователь создал таблицу он становится ее суперпользователем.
+Если он хочет поделиться своей таблицей с другими пользователями, он может использовать команду GRANT для
+предоставления различных привелегий в этой таблице различным пользователям, таким образом составляя
+Access List для пользователей, имеющих доступ к таблице, состояющий из UID пользователей.
+
+\subsubsection{Архитектура безопасной СУБД}
+Многоуровневые защищенные архитектуры РСУБД можно разделить на два общих типа, в зависимости от того,
+осуществляется ли принудительный контроль доступа самой РСУБД или делегируется доверенной операционной системе.
+Эти два основных типа - это архитектура Вудс-Холла и архитектура TrustedSubjects.
+\paragraph  {Архитектура Вудс-Холла}
+Архитектура Вудс-Холла предполагает, что для доступа к данным используется ненадежная стандартная РСУБД
+и что доверенный код разрабатывается вокруг этой РСУБД для обеспечения общей безопасной РСУБД.
+Их можно разделить на две категории: ядерные (kernel) архитектуры и распределенные архитектуры.
+\paragraph{Ядерная(kernel) архитектура}
+Ядерная архитектура использует надежную операционную систему и несколько копий готовой СУБД,
+где каждая копия связана с некоторым доверенным интерфейсом. Каждая пара (доверенный интерфейс, СУБД)
+связана с определенным уровнем безопасности. Доверенная операционная система применяет свою политику
+полного контроля доступа ко всем доступам СУБД к объектам СУБД. Это гарантирует, что данные с разными
+уровнями безопасности хранятся отдельно, и что каждая копия СУБД получает доступ к данным, авторизованным
+для соответствующего уровня безопасности. Последнее возможно, потому что многоуровневая база данных разбита
+на несколько одноуровневых баз данных, каждая из которых представляет собой фрагмент
+концептуальной многоуровневой базы данных. Каждый фрагмент хранится в одноуровневом объекте операционной
+системы (например, в файле), который помечен операционной системой на соответствующем уровне безопасности,
+и, таким образом, к нему можно получить доступ только в соответствии с политикой MAC операционной системы.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/security/kernel.png}
+    \caption{Ядерная архитектура}
+    \label{fig:mesh1}
+\end{figure}
+На картинке изображена Ядерная архитектура, в которой одна РСУБД связана с уровнем безопасности «Высокий»,
+а другая РСУБД связана с уровнем безопасности «Низкий».
+РСУБД, связанная с уровнем безопасности «Высокий», имеет доступ как к фрагменту базы данных с высоким уровнем безопасности,
+так и к фрагменту базы данных с низким уровнем безопасности. А РСУБД, ассоциированная с уровнем безопасности «Низкий»,
+имеет доступ только к фрагменту базы данных с низким уровнем безопасности.
+Преимущество этой архитектуры заключается в том, что данные на разных уровнях безопасности изолированы.
+Еще одно преимущество состоит в том, что при условии, что надежная операционная система уже готова,
+эта архитектура должна минимизировать количество времени и усилий для установки СУБД.
+Однако эта архитектура приводит к дополнительным накладным расходам, поскольку доверенной
+операционной системе необходимо разделять данные на разных уровнях безопасности при добавлении в базу данных,
+а также может потребоваться совершать трудоемкие операции объединения данных с разных уровней безопасности.
+
+\paragraph{Распределенные архитектуры}
+Распределенная (или реплицированная) архитектура - это вариант ядерной архитектуры.
+Он использует несколько копий доверенного интерфейса и СУБД, каждая из которых связана
+со своим собственным хранилищем базы данных. В этой архитектурной схеме СУБД на уровне
+безопасности содержит реплику каждого элемента данных, к которому субъект на уровне может получить доступ.
+Таким образом, когда данные извлекаются повторно, СУБД извлекает их только из своей собственной базы данных.
+Еще одно преимущество этой архитектуры состоит в том, что данные физически разделены на отдельные аппаратные базы данных.
+Однако эта схема приводит к дополнительным накладным расходам, когда данные обновляются, поскольку различные
+реплики должны быть синхронизированы.
+\paragraph{Архитектура TrustedSubjects}
+Архитектура TrustedSubjects - это схема, которая содержит надежную СУБД и надежную операционную систему.
+Согласно этой архитектуре, политика обязательного контроля доступа обеспечивается самой СУБД.
+Объекты базы данных (например, таблица) хранятся в объектах операционной системы (например, в файле) с наивысшим
+уровнем безопасности. Таблица базы данных может содержать хранить строки с разными уровнями безопасности.
+Такие строки различаются на основе их уровня безопасности, который явно сохраняется с каждой строкой.
+Эта архитектура называется TrustedSubjects, потому что РСУБД имеет привилегию нарушать политику MAC
+операционной системы при доступе к объектам базы данных. Например, когда пользователь с низким уровнем
+безопасности запрашивает таблицу базы данных, к объекту операционной системы, в котором хранится эта таблица,
+оказывается, что это является нарушением MAC-политики операционной системы. Но РСУБД способна возвращать пользователям
+только те строки, для которых он или она авторизованы в соответствии с политикой MAC.
+Преимущество этой архитектуры состоит в том, что СУБД имеет доступ ко всем уровням данных в одно и то же время,
+что сводит к минимуму извлечение и обработку обновлений. Однако эта архитектура приводит к созданию специальной
+РСУБД, которая требует разработки и проверки большого количества доверенного кода наряду с обычными функциями РСУБД.
+Недостатком можно считать недостаточный уровень гарантии аппаратной изоляции объектов.
+Также сложно доказать, что доверенное программное обеспечение, используемое для изоляции объектов
+(например, потоков данных с разными уровнями безопасности), работает правильно, не допуская потока данных
+с высоким уровнем безопасности для пользователей с низким уровнем безопасности.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/security/trusted.png}
+    \caption{архитектура TrustedSubjects}
+    \label{fig:mesh1}
+\end{figure}
+
+\subsubsection{Архитектура SeaView и ASD}
+Многие гражданские, оборонные или коммерческие компании хотят многоуровневую систему баз данных - поддерживающую данные,
+имеющие разные классы доступа (маркировку безопасности) и пользователей с разными полномочиями.
+В качестве примеров классов доступа широко известны Российские грифы (маркировки): Секретно, Совершеннно секретно,Особой важности
+Политика безопасности SeaView состоит из мандатной модели, дискреционной и вспомогательной для добавления и классификации
+новой информации поступающей в базу данных.
+Используется в системе реляционных баз данных, разработанной в Стэнфордском исследовательском институте. Состоит из двух слоев:
+\begin{itemize}
+    \item \textbf{MAC}
+    обязательный контроль доступа. Этот уровень соответствует обязательной политике безопасности моделей Bell-LaPadula и Biba.
+    \item \textbf{TCB}
+    Trusted Computing Base Определяет концепцию многоуровневых отношений, поддерживает дискреционные средства
+    \item управления для многоуровневых отношений и представлений, а также формализует поддерживающие политики.
+    TCB построен поверх MAC.
+\end{itemize}
+Модель Sea View использует субъекты, объекты и классы доступа. Класс доступа состоит из:
+\begin{itemize}
+    \item \textbf{Класс секретности}
+    Класс секретности соответствует уровню безопасности модели Bell-LaПадулы
+    \item \textbf{Класс целостности}
+    Класс целостности соответствует уровню целостности модели Биба
+\end{itemize}
+Объекты MAC - это файлы, к которым должен быть предоставлен доступ.
+Субъекты MAC - это процессы, действующие от имени пользователей, и им назначается классификация этого пользователя.
+Каждому пользователю назначаются:
+\begin{itemize}
+    \item Класс минимальной секретности (minsecrecy)
+    \item Класс минимальной целостности (minintegrity)
+    \item Классы секретности и целостности, первоначально назначенные пользователю, обозначаются maxsecrecy и maxintegrity
+\end{itemize}
+Каждому объекту назначаются классы:
+\begin{itemize}
+    \item Класс для записи (minsecrecy, maxintegrity)
+    \item Класс для чтения (maxsecrecy, minintegrity)
+\end{itemize}
+Причем для каждого объекта класс чтения должен быть выше класса записи.
+Субъект считается доверенным, если класс чтения строго больше класса записи.
 
 \subsection{Проектирование безопасных БД}
 Разработать универсальную защищенную систему баз данных скорее всего нереально. При любом
